--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -34,32 +34,31 @@
 .SIDEBAR__FEATURED__STREAMS {
   border-top: 1px solid #3d3d3d;
   background-color: #1e1f26;
-}
+    a {
+      max-height: 35px;
+      display: flex;
+      margin: 10px;
+      margin-left: 25px;
+      padding: 0 5px;
+      max-width: 13vw;
+    }
 
-.SIDEBAR__FEATURED__STREAMS a {
-  max-height: 35px;
-  display: flex;
-  margin: 10px;
-  margin-left: 25px;
-  padding: 0 5px;
-  max-width: 13vw;
-}
+    img {
+      margin-top: 5px;
+      margin-right: 5px;
+      float: left;
+      clear: both;
+    }
 
-.SIDEBAR__FEATURED__STREAMS img {
-  margin-top: 5px;
-  margin-right: 5px;
-  float: left;
-  clear: both;
-}
-
-.SIDEBAR__FEATURED__STREAMS p {
-  margin: 0;
-  font-size: 11px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display:block;
-  margin-top: 5px;
+    p {
+      margin: 0;
+      font-size: 11px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display:block;
+      margin-top: 5px;
+    }
 }
 
 .HIDE, .HIDE__TITLE {
